Update Assigment - 10 - 05 (Fibonacci Numbers).ipynb

--- a/Python/Assigment - 10 - 05 (Fibonacci Numbers).ipynb
+++ b/Python/Assigment - 10 - 05 (Fibonacci Numbers).ipynb
@@ -17,7 +17,7 @@
     "# fibonacci numbers [1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
     "# Hocam boş listeye ekleyerek yapamadım. \n",
     "# Bunu bulduktan sonra internete baktığımda onlar da ilk iki değeri vermişler\n",
-    "# Hocam github'ta bir sorun çıktı. o yüzden yükleyemedim ve gece 12 den sonraya kaldı\n",
+    "# Hocam github'ta bir sorun çıktı. o yüzden yükleyemedim ve bu kadar geç attım. Kusura bakmayın\n",
     "f_num = [0, 1]\n",
     "for i in range(56):\n",
     "  if f_num[-2] + f_num[-1] == i:\n",
